Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Level_Definition__mdt/Level_Definition__mdt.object-meta.xml
<CustomObject>
    <label>Level Definition</label>
    <pluralLabel>Level Definitions</pluralLabel>
</CustomObject>