Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Level_Definition__mdt/fields/Badge_Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>Badge_Icon_URL__c</fullName>
    <label>Badge Icon URL</label>
    <type>Url</type>
</CustomField>