Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Level_Definition__mdt/fields/Rank_Name__c.field-meta.xml
<CustomField>
    <fullName>Rank_Name__c</fullName>
    <label>Rank Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>