Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Level_Definition__mdt/fields/XP_Threshold__c.field-meta.xml
<CustomField>
    <fullName>XP_Threshold__c</fullName>
    <label>XP Threshold</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>